# jsonrpc-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
client-go/: client.go  go.mod  types.go  types_test.go
client-go/examples/: quickstart.go
examples/: rpcize.rs
examples/hello-world/: client.rs  server.rs
examples/quickstart/: client.rs  server.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
proc-macro/src/tests/: mod.rs
src/: lib.rs
src/client/: mod.rs
src/codec/base64/bytes/: mod.rs  optionals.rs
src/codec/base64/bytes/tests/: mod.rs
src/errors/: mod.rs
src/server/: channel.rs  mod.rs
src/transport/: mod.rs
src/transport/tcp/: conn.rs  listener.rs  mod.rs
src/types/: mod.rs  request.rs  response.rs
