[package]
name = "jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "hello-world-client"
path = "examples/hello-world/client.rs"

[[example]]
name = "hello-world-server"
path = "examples/hello-world/server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"

[dependencies.jsonrpc-proc-macro]
path = "./proc-macro"
