[package]
name = "jsonrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "quickstart-client"
path = "examples/quickstart/client.rs"

[[example]]
name = "quickstart-server"
path = "examples/quickstart/server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"

[dependencies.jsonrpc-proc-macro]
path = "./proc-macro"
